--- a/5.0/printer/Printer.cshtml
+++ b/5.0/printer/Printer.cshtml
@@ -9,39 +9,43 @@
   PageData["model"] = Model;
   PageData["show_home"] = Model.Style.StyleInstance.StyleKey.StartsWith("vocm19ap");
   Layout = "PL_Layout.cshtml";
+
+  var lang = PageData["lang"];
+  var string_map = PageData["string_map"];
 }
+
 <div class="main">
   @* Display list when idle *@
-  <div id="queuelist" data-content-src="@Model.Navigate("QueueList.cshtml")">
+  <div id="queuelist" data-content-src="@Model.Navigate("QueueList.cshtml", new { lang=lang })">
   </div>
 
   @* wait popup is shown, while generating a new number *@
   <section id="waitPopup" style="display: none;">
-    <h4>Ihre Wartemarke wird gedruckt</h4>
+    <h4>@string_map["Print_WaitHeader"]</h4>
     <div>
       <img src="wait.gif" id="wait" alt="wait" />
     </div>
-    <p>Bitte entnehmen Sie Ihre Wartenummer</p>
+    <p>@string_map["Print_WaitText"]</p>
     <img src="PfeilRechts.png" />
   </section>
 
   @* take popup is shown, when the printout is ready *@
   <section id="takePopup" style="display: none;">
-      <h4>Ihre Wartemarke wird gedruckt</h4>
+      <h4>@string_map["Print_TakeHeader"]</h4>
     <div>
       <img src="wait.gif" id="wait" alt="wait" />
     </div>
-    <p>Bitte entnehmen Sie Ihre Wartenummer</p>
+    <p>@string_map["Print_TakeText"]</p>
     <img src="PfeilRechts.png" />
   </section>
 
   @* show popup shows the number on the screen *@
   <section id="showPopup" style="display: none;">
-    <h3>Sie werden angemeldet im Fachbereich</h3>
+    <h3>@string_map["Print_ShowHeader"]</h3>
     <h2 data-name></h2>
-    <p>Bitte merken Sie sich Ihre Anmeldenummer:</p>
+    <p>@string_map["Print_ShowText1"]</p>
     <div class="number" data-number></div>
-    <p>Sie werden aufgerufen</p>
+    <p>@string_map["Print_ShowText2"]</p>
   </section>
 </div>
 
