--- a/printer/P2_GetTicket.cshtml
+++ b/printer/P2_GetTicket.cshtml
@@ -23,7 +23,7 @@
 }
 
 <div class="site-content">
-  <h2>So geht's weiter</h2>
+  <h4>SO GEHT‘S WEITER</h4>
   <div class="left">
     <p>Ziehen Sie Ihr Ticket und machen Sie es sich auf dem Sofa bequem.</p> 
     <p>Ticket drucken</p>
