--- a/printer/P2_GetTicket.cshtml
+++ b/printer/P2_GetTicket.cshtml
@@ -41,7 +41,6 @@
 <section id="waitPopup" style="display:none;">
   <h4>SO GEHT‘S WEITER.</h4>
   <div class="Todo2">
-  <p>Ziehen Sie Ihr Ticket und machen Sie es sich auf dem Sofa bequem.</p><p>Wir sind ruckzuck für Sie da!</p>
   </div>
   <img src="images/wait.gif" id="wait" alt="wait" />
   <h6>Ihr Ticket wird gedruckt.</h6>
@@ -65,7 +64,7 @@
         $("#waitPopup").show();
       },
       failPrint: function() {
-        $("#waitPopup").hide();
+        $("#waitPopup").show();
       }
     });
 
